kubernetes/apps/user/home/home-assistant/app/authentik-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: authentik-outpost-home-assistant
    namespace: security
spec:
  annotations:
    
  rules:
    - host: home.abchost.nl
      http:
        paths:
          - path: /outpost.goauthentik.io
            pathType: Prefix
            backend:
              # Or, to use an external Outpost, create an ExternalName service and reference that here.
              # See https://kubernetes.io/docs/concepts/services-networking/service/#externalname
              service:
                  name: ak-outpost-authentik-embedded-outpost
                  port:
                      number: 9000
